--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                   </div>
                 </div>
                 <div>
-                  <img src="https://openweathermap.org/img/wn/{{weatherdata.icon}}@2x.png"
+                  <img src="http://openweathermap.org/img/wn/{{weatherdata.icon}}@2x.png"
                     width="100px">
                 </div>
               </div>
